--- a/document-types/medical_safety_alert.html
+++ b/document-types/medical_safety_alert.html
@@ -363,7 +363,7 @@
 <ul>
 <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-03-to-07-may-2021">Field Safety Notices: 3 to 7 May 2021</a></li>
 <li><a href="https://www.gov.uk/drug-device-alerts/class-2-medicines-recall-astrazeneca-uk-limited-bricanyl-injection-0-dot-5-mg-slash-ml-solution-for-injection-or-infusion-pl-17901-slash-0112-el-21-a-slash-12">Class 2 Medicines Recall: AstraZeneca UK Limited, Bricanyl Injection, 0.5 mg/ml solution for injection or infusion (PL 17901/0112), EL (21)A/12</a></li>
-<li><a href="https://www.gov.uk/drug-device-alerts/recall-of-bd-venflon-pro-safety-iv-cannula">Recall of BD Venflon Pro safety IV cannula </a></li>
+<li><a href="https://www.gov.uk/drug-device-alerts/recall-of-bd-venflon-pro-safety-iv-cannula">Recall of BD Venflon Pro safety and Venflon Pro IV cannula </a></li>
 <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-10-to-14-may-2021">Field Safety Notices: 10 to 14 May 2021</a></li>
 <li><a href="https://www.gov.uk/drug-device-alerts/targeted-communication-ce-mark-suspended-for-all-magec-systems-manufactured-by-nuvasive-specialized-orthopedics-inc">Targeted communication: CE mark suspended for all MAGEC systems manufactured by NuVasive Specialized Orthopedics, Inc.</a></li>
 <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-26-to-30-april-2021">Field Safety Notices: 26 to 30 April 2021</a></li>
