--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.uk/government/world-location-news/230354.pt">Força-Tarefa para Economias Emergentes</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/queen-elizabeth-land-commemorative-coins-released">Queen Elizabeth Land Commemorative Coins released</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197856.zh-tw">世界反死刑日</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/president-pierre-buyoya-opens-second-wilton-park-conference-on-peacebuilding-in-africa-in-addis-ababa--2">President Pierre Buyoya opens second Wilton Park conference on ‘Peacebuilding in Africa’ in Addis Ababa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--20">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/231029.es">Empresa y Derechos Humanos: Agenda Pública y Privada</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/futures-congress-with-large-presence-of-uk-experts-in-chile--2">Futures Congress with large presence of UK experts in Chile</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238911.pt">Conferência sobre Eficiência Energética em Belo Horizonte</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263029.pt">Banco Central e Reino Unido assinam acordo de cooperação</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/176254.es-419">Concurso: Green is GREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/282770.es">Exhibición y cata de cervezas premium británicas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192707.es-419">El Reino Unido presente en la Cumbre Aerospacial México 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/oslos-christmas-tree-gift-to-trafalgar-square--2">Oslo’s 2015 Christmas tree gift to Trafalgar Square</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/277623.zh-tw">簽證中心聖誕節與新年假期閉館時間</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
