--- a/apps/email-alert-api/adr/adr-007-retain-data-for-up-to-one-year.html
+++ b/apps/email-alert-api/adr/adr-007-retain-data-for-up-to-one-year.html
@@ -364,6 +364,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/email-alert-api/commit/db9997e567f41929e07171591413454e7e1d4c95">20 Nov 2020</a>
 </div>
